@@ -59,6 +59,9 @@ if ($_POST) {
 		} else {
 			$input_errors[] = gettext("detected an error while importing.");
 		}
+		if ($retval >= 0) {
+			disks_update_mounts();
+		}
 		//skip redirect
 		//header("Location: disks_manage.php");
 		//exit;
@@ -71,6 +74,9 @@ if ($_POST) {
 			$savemsg = gettext("all software raid disks are imported.");
 		} else {
 			$input_errors[] = gettext("detected an error while importing.");
+		}
+		if ($retval >= 0) {
+			disks_update_mounts();
 		}
 		//skip redirect
 		//header("Location: disks_manage.php");
